--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,7 +17,7 @@ darker orange:#bf6516
 
 html{
     background-color:#fff;
-    color:rgb(255, 255, 255);
+    color:rgb(0, 0, 0);
     font-family:'Lato','Arial',sans-serif;
     font-weight:800;
     font-size:20px;
@@ -45,6 +45,7 @@ header{
     background-position: center;
     background-size: cover;
     /* border:2px solid red; */
+    color:#fff;
 }
 
 .heroText{
@@ -63,7 +64,7 @@ header{
 /* header{
     border:1px solid rgba(255, 255, 255, 0);
 } */
-.heroText h1{
+h1{
     margin-bottom: 10px;
     text-transform:uppercase;
     font-weight:300;
@@ -157,4 +158,41 @@ BUTTONS
     text-transform:uppercase;
     font-size: 90%;
     border-bottom: 1px solid #e67e22;
+}
+
+/*---------------------------------------*/
+/* FEATURES SECTION */
+/*---------------------------------------*/
+.sec-features{
+    color:black;
+    /* border:1px solid greenyellow; */
+}
+h2{
+    text-transform: uppercase;
+    font-size:35px;
+    font-weight:900;
+    word-spacing: 5px;
+    letter-spacing: 1px;
+    margin-bottom: 8px;
+}
+h3{
+    font-size:25px;
+    font-weight:800;
+}
+
+/* .sec-features .features .feature{
+    display:grid;
+    width:24.5%;
+    display:inline-block;
+    align-items:flex-start;
+} */
+.features{
+    margin-top: 40px;
+    font-size:20px;
+    font-weight:300;
+}
+.feature{
+    float:left;
+    margin:1%;
+    width:23%;
 }
