--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -57,7 +57,7 @@ header{
     position:absolute;
     top:50%;
     left:50%;
-    font-size:240%;
+    /* font-size:240%; */
     transform: translate(-50%,-50%);
     /*------------------------*/
 }
@@ -65,12 +65,26 @@ header{
     border:1px solid rgba(255, 255, 255, 0);
 } */
 h1{
+    font-size:240%;      
     margin-bottom: 10px;
     text-transform:uppercase;
     font-weight:300;
     word-spacing: 10px;
     letter-spacing:1px;
 }
+h2{
+    text-transform: uppercase;
+    font-size:175%;
+    font-weight:600;
+    word-spacing: 5px;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+}
+h3{
+    font-size:25px;
+    font-weight:600;
+}
+
 /*----------------------------------------
 BUTTONS
 ------------------------------------------*/
@@ -166,33 +180,47 @@ BUTTONS
 .sec-features{
     color:black;
     /* border:1px solid greenyellow; */
+    text-align:center;
+    margin-top:100px;
 }
-h2{
-    text-transform: uppercase;
-    font-size:35px;
-    font-weight:900;
-    word-spacing: 5px;
+.sec-features .heading{
+    font-weight:300;
+    margin:0 15%;
     letter-spacing: 1px;
-    margin-bottom: 8px;
 }
-h3{
-    font-size:25px;
-    font-weight:800;
+.sec-features .heading p{
+    margin: 10% 0;
 }
-
-/* .sec-features .features .feature{
-    display:grid;
-    width:24.5%;
-    display:inline-block;
-    align-items:flex-start;
-} */
+.sec-features .heading p::after{
+    height:3px;
+    background-color:#e67e22;
+    width:200px;
+    content:" ";
+    display:block;
+    margin:10% auto;
+}
 .features{
     margin-top: 40px;
-    font-size:20px;
+    font-size:125%;
     font-weight:300;
 }
 .feature{
     float:left;
     margin:1%;
     width:23%;
+    font-size:80%;
+    text-align:center;
+}
+.feature p{
+    text-align:center;
+    line-height: 125%;
+    margin-top:20px;
+}
+.features ion-icon{
+    font-size:300%;
+    color: #e67e22;
+    margin-bottom:20px;
+}
+.tempa{
+    margin-bottom:45px;
 }
