--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -224,3 +224,40 @@ BUTTONS
 .tempa{
     margin-bottom:45px;
 }
+/*---------------------------------------*/
+/* GALLERY CUSTOMER FAVOURITES */
+/*---------------------------------------*/
+.gallery{
+    margin-top: 20%;
+    width:100%;
+    height:auto;
+}
+.gallery ul{
+    list-style: none;
+    /* display:block; */
+    width:100%;
+    height:auto;
+    margin:0;
+}
+.gallery li{
+    float:left;
+    width:25%;
+    height:auto;
+    /* border:1px solid red; */
+    margin:0;
+    overflow:hidden;
+    background-color: #000;
+}
+.gallery img{
+    width:100%;background-color: black;
+    height:auto;
+    /* border:1px solid greenyellow; */
+    margin:0;
+    transform:scale(1.3);
+    transition:transform 0.5s,opacity 0.5s;
+    opacity:0.6;
+}
+.gallery img:hover{
+    transform:scale(1);
+    opacity:1;
+}
