--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,8 @@
 /*---------------------------------------
 orange: #e67e22;
 darker orange:#bf6516
+green:#73daab;
+blue:rgb(202, 239, 250);
 ---------------------------------------*/
 
 
@@ -94,6 +96,7 @@ h2{
 h3{
     font-size:25px;
     font-weight:600;
+    text-transform:uppercase;
 }
 
 /*----------------------------------------
@@ -290,6 +293,7 @@ BUTTONS
 .howitworks{
     padding-top:15vh;
     background-color:rgb(202, 239, 250);
+    padding-bottom:15vh;
 }
 .how{ 
     /* border: 1px solid firebrick; */
@@ -334,7 +338,7 @@ BUTTONS
     display:block;
     height:3px;
     width:200px;
-    margin:0 auto;
+    margin:10vh auto 0 auto;
     background-color:#e67e22;
     /* content:""; */
     /* border:2px solid #e67e22; */
@@ -352,3 +356,59 @@ BUTTONS
 /* .step:last-of-type{
     background-color:red;
 } */
+
+
+
+/*---------------------------------------*/
+/* cities*/
+/*---------------------------------------*/
+
+.city{
+    float:left;
+    width:25%;
+    /* border:1px solid forestgreen; */
+}
+.city img{
+    display: inline-block;
+    width:90%;
+    height:auto;
+    margin:5%;
+}
+.cities{
+    text-align: center;
+}
+.cities-heading:after{
+    display:block;
+    content:"";
+    /* visibility:hidden; */
+    height:3px;
+    width:200px;
+    background-color: #e67e22;
+    margin: 10vh auto;
+}
+.city ul{
+    text-align:left;
+    margin-top:10%;
+    /* border:1px solid deepskyblue; */
+}
+.city li{
+    margin-bottom:14px;
+    margin-left:5%;
+    /* margin-top:10%; */
+    /* border:1px solid firebrick; */
+}
+.city-ul ion-icon{
+    color:#e67e22;
+    font-size: 30px;
+    margin-right:15px;
+    /* position:relative; */
+}
+.sec-cities{
+    padding-top:15vh;
+    background-color: #73daab;
+    padding-bottom:15vh;
+    /* border:1px solid forestgreen; */
+}
+.cities h3,a{
+    color:#e67e22;
+}
