--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -402,7 +402,10 @@ BUTTONS
     font-size: 30px;
     margin-right:15px;
     /* position:relative; */
+    vertical-align: middle;
+    /* border:1px solid palevioletred; */
 }
+
 .sec-cities{
     padding-top:15vh;
     background-color: #73daab;
@@ -411,4 +414,16 @@ BUTTONS
 }
 .cities h3,a{
     color:#e67e22;
+}
+
+.city a:link,a:visited{
+    text-decoration: none;
+    border-bottom: 1px solid #e67e22;
+    padding-bottom:1px;
+    transition: border-bottom 0.2s color:0.2s;
+}
+.city a:hover,a:active{
+    text-decoration:none;
+    border-bottom: 1px solid transparent;
+    color:rgb(202, 239, 250);
 }
