--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -63,17 +63,18 @@ header{
 }
 
 .heroText{
-    /* border:1px solid greenyellow; */
-    width:1140px;
-    /* this positions the element exactly in the center of the 
-    parent element or the viewport (ie according to whichever of 
-    these, the element has been absolutely positioned)*/
-    position:absolute;
+    /*border:1px solid greenyellow;
+    */width:1140px;
+    /*thispositionstheelementexactlyinthecenteroftheparentelementortheviewport(ieaccordingtowhicheverofthese,theelementhasbeenabsolutelypositioned)*/position:absolute;
     top:50%;
     left:50%;
-    /* font-size:240%; */
-    transform: translate(-50%,-50%);
-    /*------------------------*/
+    /*font-size:240%;
+    */transform: translate(-50%,-50%);
+        /*------------------------*/:;
+    -webkit-transform: translate(-50%,-50%);
+    -moz-transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    -o-transform: translate(-50%,-50%);
 }
 /* header{
     border:1px solid rgba(255, 255, 255, 0);
@@ -84,10 +85,10 @@ h1{
     text-transform:uppercase;
     font-weight:300;
     word-spacing: 10px;
-    letter-spacing:1px;
+    letter-spacing:1px;   
 }
 h2{
-    text-transform: uppercase;
+    text-transform: uppercase;  
     font-size:175%;
     font-weight:600;
     word-spacing: 5px;
@@ -105,14 +106,18 @@ BUTTONS
 ------------------------------------------*/
 .btn:link,.btn:visited,.form input[type="submit"]{
     display:inline-block;
-    /* background-color:#e67e22; */
-    border-radius:200px;
-    /* color:white; */
-    text-decoration:none;
+    /*background-color:#e67e22;
+    */border-radius:200px;
+    /*color:white;
+    */text-decoration:none;
     padding:10px 25px;
     font-size:20px;
     font-weight:100;
     transition:background-color 0.2s, border 0.2s, color 0.2s;
+    -webkit-transition:background-color 0.2s, border 0.2s, color 0.2s;
+    -moz-transition:background-color 0.2s, border 0.2s, color 0.2s;
+    -ms-transition:background-color 0.2s, border 0.2s, color 0.2s;
+    -o-transition:background-color 0.2s, border 0.2s, color 0.2s;
 }
 .btn-main,.form input[type="submit"]{
     margin-right:20px;
@@ -157,7 +162,7 @@ BUTTONS
     left:50%;
     top:30px;
     transform:translate(-50%,0);
-    width:1140px
+    width:1140px;
 }
 .nav-panel .nav-links{
     float:right;
@@ -178,6 +183,10 @@ BUTTONS
     transition: border-bottom 0.2s;
     padding: 5px 0;
     border: 1px solid transparent;
+    -webkit-transition: border-bottom 0.2s;
+    -moz-transition: border-bottom 0.2s;
+    -ms-transition: border-bottom 0.2s;
+    -o-transition: border-bottom 0.2s;
 }
 .nav-links a:hover,.nav-links a:active{
     text-decoration: none;
@@ -266,13 +275,22 @@ BUTTONS
     background-color: #000;
 }
 .gallery img{
-    width:100%;background-color: black;
+    width:100%;
+    background-color: black;
     height:auto;
-    /* border:1px solid greenyellow; */
-    margin:0;
+    /*border:1px solid greenyellow;
+    */margin:0;
     transform:scale(1.3);
     transition:transform 0.5s,opacity 0.5s;
     opacity:0.6;
+    -webkit-transform:scale(1.3);
+    -moz-transform:scale(1.3);
+    -ms-transform:scale(1.3);
+    -o-transform:scale(1.3);
+    -webkit-transition:transform 0.5s,opacity 0.5s;
+    -moz-transition:transform 0.5s,opacity 0.5s;
+    -ms-transition:transform 0.5s,opacity 0.5s;
+    -o-transition:transform 0.5s,opacity 0.5s;
 }
 .gallery img:hover{
     transform:scale(1);
@@ -710,3 +728,6 @@ BUTTONS
     display:inline-block;
     margin-top:10px;
 }
+
+
+
