buttons embedded  with the corresponding links

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -730,4 +730,13 @@ BUTTONS
 }
 
 
-
+.myself{
+    position: relative;
+    /* height:100px; */
+    width: 100%;
+    margin:0;padding:0;
+    margin-top:1rem;
+}
+.name{
+    color: #e67e22;
+}
